--- a/jsClock/clock.html
+++ b/jsClock/clock.html
@@ -3,7 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>JS CLOCK</title>
+		<link rel="stylesheet" href="clock.css">
 	</head>
 	<body>
+		<div class="clock">
+			<div class="clock-face">
+				<div class="hand hour-hand"></div>
+				<div class="hand minut-hand"></div>
+				<div class="hand second-hand"></div>
+			</div>
+		</div>
+		<script src="clock.js"></script>
 	</body>
 </html>
