finished, we have now to complete the readme.txt

--- a/ajaxType/ajaxType.html
+++ b/ajaxType/ajaxType.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="ajaxType.css">
 </head>
 <body>
-  <script src="ajaxType.js"></script>
+	<form class="search-form">
+		<input type="text" class="search" placeholder="City">
+		<ul class="suggestions">
+			<li>Filter for a city</li>
+		</ul>
+	</form>
+	<script src="ajaxType.js"></script>
 </body>
 </html>
