finished! with readme.txt also!

--- a/devTools/devtools.html
+++ b/devTools/devtools.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="devtools.css">
 </head>
 <body>
+	<p onclick="makeGreen()">xBREAKxDOWNx</p>
 	<script src="devtools.js"></script>
 </body>
 </html>
